--- a/examples/bottlesofbeer/pom.xml
+++ b/examples/bottlesofbeer/pom.xml
@@ -1,50 +1,51 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <artifactId>bottlesofbeer</artifactId>
-   <packaging>jar</packaging>
-   <name>khubla.com jvmBasic Bottles of Beer</name>
-   <parent>
-      <groupId>com.khubla.jvmbasic</groupId>
-      <artifactId>examples</artifactId>
-      <version>2.1-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-   </parent>
-   <dependencies>
-      <dependency>
-         <groupId>com.khubla.jvmbasic</groupId>
-         <artifactId>jvmbasicrt</artifactId>
-         <version>2.1-SNAPSHOT</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-   </dependencies>
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-               <source>1.5</source>
-               <target>1.5</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>com.khubla.jvmbasic</groupId>
-            <artifactId>jvmbasic-maven-plugin</artifactId>
-            <version>2.1-SNAPSHOT</version>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                     <mainClass>BOTTLESOFBEER</mainClass>
-                  </manifest>
-               </archive>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>bottlesofbeer</artifactId>
+	<packaging>jar</packaging>
+	<name>khubla.com jvmBasic Bottles of Beer</name>
+	<parent>
+		<groupId>com.khubla.jvmbasic</groupId>
+		<artifactId>examples</artifactId>
+		<version>2.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<dependencies>
+		<dependency>
+			<groupId>com.khubla.jvmbasic</groupId>
+			<artifactId>jvmbasicrt</artifactId>
+			<version>2.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.khubla.jvmbasic</groupId>
+				<artifactId>jvmbasic-maven-plugin</artifactId>
+				<version>2.1-SNAPSHOT</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>BOTTLESOFBEER</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
