--- a/jvmbasicmojo/pom.xml
+++ b/jvmbasicmojo/pom.xml
@@ -1,96 +1,97 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>com.khubla.jvmbasic</groupId>
-   <artifactId>jvmbasic-maven-plugin</artifactId>
-   <packaging>maven-plugin</packaging>
-   <version>2.1-SNAPSHOT</version>
-   <name>khubla.com jvmBasic Maven Mojo</name>
-   <properties>
-      <maven.version>3.0.5</maven.version>
-   </properties>
-   <dependencies>
-      <dependency>
-         <groupId>org.apache.maven</groupId>
-         <artifactId>maven-plugin-api</artifactId>
-         <version>${maven.version}</version>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>com.khubla.jvmbasic</groupId>
-         <artifactId>jvmbasicc</artifactId>
-         <version>2.1-SNAPSHOT</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.maven.plugin-testing</groupId>
-         <artifactId>maven-plugin-testing-harness</artifactId>
-         <version>2.1</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.maven</groupId>
-         <artifactId>maven-core</artifactId>
-         <version>${maven.version}</version>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.maven</groupId>
-         <artifactId>maven-compat</artifactId>
-         <version>${maven.version}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.maven.plugin-tools</groupId>
-         <artifactId>maven-plugin-annotations</artifactId>
-         <version>3.2</version>
-         <scope>provided</scope>
-      </dependency>
-   </dependencies>
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
-            <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-plugin-plugin</artifactId>
-            <version>3.2</version>
-            <configuration>
-               <goalPrefix>jvmbasic</goalPrefix>
-            </configuration>
-            <executions>
-               <execution>
-                  <id>default-descriptor</id>
-                  <goals>
-                     <goal>descriptor</goal>
-                  </goals>
-                  <phase>process-classes</phase>
-               </execution>
-               <execution>
-                  <id>help-descriptor</id>
-                  <goals>
-                     <goal>helpmojo</goal>
-                  </goals>
-                  <phase>process-classes</phase>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
-      <finalName>${project.artifactId}-${project.version}</finalName>
-   </build>
-   <distributionManagement>
-      <repository>
-         <id>jvmBasic-maven</id>
-         <name>jvmBasic Maven Mojo Repository</name>
-         <url>file://repo</url>
-         <layout>default</layout>
-      </repository>
-   </distributionManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.khubla.jvmbasic</groupId>
+	<artifactId>jvmbasic-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
+	<version>2.1-SNAPSHOT</version>
+	<name>khubla.com jvmBasic Maven Mojo</name>
+	<properties>
+		<maven.version>3.0.5</maven.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>${maven.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.khubla.jvmbasic</groupId>
+			<artifactId>jvmbasicc</artifactId>
+			<version>2.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-testing</groupId>
+			<artifactId>maven-plugin-testing-harness</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>${maven.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-compat</artifactId>
+			<version>${maven.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.2</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<goalPrefix>jvmbasic</goalPrefix>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-descriptor</id>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+						<phase>process-classes</phase>
+					</execution>
+					<execution>
+						<id>help-descriptor</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+						<phase>process-classes</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+	</build>
+	<distributionManagement>
+		<repository>
+			<id>jvmBasic-maven</id>
+			<name>jvmBasic Maven Mojo Repository</name>
+			<url>file://repo</url>
+			<layout>default</layout>
+		</repository>
+	</distributionManagement>
 </project>
