--- a/jvmbasicmojo/pom.xml
+++ b/jvmbasicmojo/pom.xml
@@ -1,12 +1,15 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.khubla.jvmbasic</groupId>
 	<artifactId>jvmbasic-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>2.1-SNAPSHOT</version>
 	<name>khubla.com jvmBasic Maven Mojo</name>
+	<parent>
+		<groupId>com.khubla.jvmbasic</groupId>
+		<artifactId>jvmBasic</artifactId>
+		<version>2.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<properties>
 		<maven.version>3.0.5</maven.version>
 	</properties>
