--- a/pom.xml
+++ b/pom.xml
@@ -1,82 +1,141 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>com.khubla.jvmbasic</groupId>
-   <artifactId>jvmBasic</artifactId>
-   <packaging>pom</packaging>
-   <version>2.1-SNAPSHOT</version>
-   <name>khubla.com jvmbasic</name>
-   <properties>
-      <commons-cli.version>1.3.1</commons-cli.version>
-      <commons-io.version>2.4</commons-io.version>
-      <testng.version>6.9.4</testng.version>
-      <target.jvm>1.6</target.jvm>
-      <logback.version>1.1.3</logback.version>
-   </properties>
-   <modules>
-      <module>jvmbasicrt</module>
-      <module>jvmbasicc</module>
-      <module>jvmbasicwww</module>
-      <module>jvmbasicmojo</module>
-      <module>examples</module>
-   </modules>
-   <build>
-      <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
-            <configuration>
-               <source>${target.jvm}</source>
-               <target>${target.jvm}</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9</version>
-            <configuration>
-               <aggregate>true</aggregate>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>3.2</version>
-         </plugin>
-      </plugins>
-   </build>
-   <developers>
-      <developer>
-         <email>tom@khubla.com</email>
-         <name>Tom Everett</name>
-         <id>khubla</id>
-         <roles>
-            <role>Original developer</role>
-         </roles>
-      </developer>
-   </developers>
-   <distributionManagement>
-      <repository>
-         <id>jvmBasic</id>
-         <name>jvmBasic Repository</name>
-         <url>file://repo</url>
-         <layout>default</layout>
-      </repository>
-   </distributionManagement>
-   <scm>
-      <connection>scm:git:git@github.com:teverett/jvmBASIC.git</connection>
-      <developerConnection>scm:git:git@github.com:teverett/jvmBASIC.git</developerConnection>
-      <url>https://github.com/teverett/jvmBASIC.git</url>
-   </scm>
-   <organization>
-      <name>khubla.com</name>
-      <url>http://www.khubla.com</url>
-   </organization>
-   <licenses>
-      <license>
-         <name>GNU General Public License, version 3</name>
-         <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
-         <distribution>repo</distribution>
-      </license>
-   </licenses>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.khubla.jvmbasic</groupId>
+	<artifactId>jvmBasic</artifactId>
+	<packaging>pom</packaging>
+	<version>2.1-SNAPSHOT</version>
+	<name>khubla.com jvmbasic</name>
+	<description>BASIC to bytecode compiler</description>
+	<url>https://github.com/teverett/jvmBASIC</url>
+	<developers>
+		<developer>
+			<id>teverett</id>
+			<name>Tom Everett</name>
+			<email>tom@khubla.com</email>
+		</developer>
+	</developers>
+	<organization>
+		<name>khubla.com</name>
+		<url>http://www.khubla.com</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/teverett/jvmBASIC.git</url>
+	</scm>
+	<properties>
+		<commons-cli.version>1.3.1</commons-cli.version>
+		<commons-io.version>2.4</commons-io.version>
+		<testng.version>6.9.4</testng.version>
+		<target.jvm>1.6</target.jvm>
+		<logback.version>1.1.3</logback.version>
+	</properties>
+	<modules>
+		<module>jvmbasicrt</module>
+		<module>jvmbasicc</module>
+		<module>jvmbasicwww</module>
+		<module>jvmbasicmojo</module>
+		<module>examples</module>
+	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>${target.jvm}</source>
+					<target>${target.jvm}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.2</version>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>deploy</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.4</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.3</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 </project>
