--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<name>khubla.com jvmbasic</name>
 	<description>BASIC to bytecode compiler</description>
 	<url>https://github.com/teverett/jvmBASIC</url>
+	<prerequisites>
+		<maven>3.1.0</maven>
+	</prerequisites>
 	<developers>
 		<developer>
 			<id>teverett</id>
@@ -26,7 +29,7 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com/teverett/jvmBASIC.git</url>
+		<connection>scm:git:https://github.com/teverett/jvmBASIC.git</connection>
 	</scm>
 	<properties>
 		<commons-cli.version>1.3.1</commons-cli.version>
@@ -76,7 +79,7 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.7</version>
+						<version>1.6.9</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
@@ -87,7 +90,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>2.4</version>
+						<version>3.1.0</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -100,7 +103,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.10.3</version>
+						<version>3.1.0</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
