--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -6,7 +6,7 @@
    <parent>
       <groupId>com.khubla.jvmbasic</groupId>
       <artifactId>jvmBasic</artifactId>
-      <version>2.2-SNAPSHOT</version>
+      <version>2.2</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    <modules>
