--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.khubla.jvmbasic</groupId>
 	<artifactId>jvmBasic</artifactId>
 	<packaging>pom</packaging>
-	<version>2.2</version>
+	<version>2.3-SNAPSHOT</version>
 	<name>khubla.com jvmbasic</name>
 	<description>BASIC to bytecode compiler</description>
 	<url>https://github.com/teverett/jvmBASIC</url>
@@ -30,7 +30,7 @@
 	</licenses>
 	<scm>
 		<connection>scm:git:https://github.com/teverett/jvmBASIC.git</connection>
-	  <tag>jvmBasic-2.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<properties>
 		<commons-cli.version>1.3.1</commons-cli.version>
