--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,10 @@
 	<groupId>com.khubla.jvmbasic</groupId>
 	<artifactId>jvmBasic</artifactId>
 	<packaging>pom</packaging>
-	<version>2.3-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 	<name>khubla.com jvmbasic</name>
 	<description>BASIC to bytecode compiler</description>
 	<url>https://github.com/teverett/jvmBASIC</url>
-	<prerequisites>
-		<maven>3.1.0</maven>
-	</prerequisites>
 	<developers>
 		<developer>
 			<id>teverett</id>
@@ -30,14 +27,17 @@
 	</licenses>
 	<scm>
 		<connection>scm:git:https://github.com/teverett/jvmBASIC.git</connection>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<properties>
 		<commons-cli.version>1.3.1</commons-cli.version>
 		<commons-io.version>2.5</commons-io.version>
 		<testng.version>6.9.10</testng.version>
 		<target.jvm>1.6</target.jvm>
 		<logback.version>1.1.7</logback.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spotless.version>1.17.0</spotless.version>
+		<required-maven-version>3.3.1</required-maven-version>
 	</properties>
 	<modules>
 		<module>jvmbasicrt</module>
@@ -51,7 +51,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>${target.jvm}</source>
 					<target>${target.jvm}</target>
@@ -60,7 +60,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
+				<version>3.0.1</version>
 				<configuration>
 					<aggregate>true</aggregate>
 				</configuration>
@@ -68,7 +68,46 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.7.1</version>
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${spotless.version}</version>
+				<configuration>
+					<lineEndings>UNIX</lineEndings>
+					<encoding>UTF-8</encoding>
+					<java>
+						<eclipse>
+							<file>${maven.multiModuleProjectDirectory}/format.eclipse.xml</file>
+							<version>4.7.1</version>
+						</eclipse>
+						<removeUnusedImports />
+						<importOrder>
+							<file>${maven.multiModuleProjectDirectory}/format.importorder</file>
+						</importOrder>
+					</java>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M2</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>${required-maven-version}</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
