--- a/jvmbasicmojo/pom.xml
+++ b/jvmbasicmojo/pom.xml
@@ -11,7 +11,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<properties>
-		<maven.version>3.3.9</maven.version>
+		<maven.version>3.6.0</maven.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
-			<version>3.5</version>
+			<version>${maven.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
