--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -67,7 +67,7 @@
 			<artifactId>jvmbasicrt</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
-		<!-- <scope>test</scope> -->	
+			<!-- <scope>test</scope> -->
 		</dependency>
 	</dependencies>
 	<build>
@@ -78,8 +78,16 @@
 				<version>${antlr.version}</version>
 				<configuration>
 					<grammars>jvmBasic.g4</grammars>
-					<outputDirectory>src/main/java</outputDirectory>
+					<visitor>true</visitor>
+					<listener>true</listener>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>antlr4</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
