--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.0.1</version>
+						<configuration>
+							<failOnError>false</failOnError>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
