--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>jvmBasic</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.4.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<properties>
-		<asm.version>7.0</asm.version>
-		<antlr.version>4.7.2</antlr.version>
+		<asm.version>8.0.1</asm.version>
+		<antlr.version>4.8-1</antlr.version>
 	</properties>
 	<dependencies>
 		<dependency>
