--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.khubla.jvmbasic</groupId>
 	<artifactId>jvmBasic</artifactId>
 	<packaging>pom</packaging>
-	<version>2.4.0</version>
+	<version>2.5.0-SNAPSHOT</version>
 	<name>khubla.com jvmbasic</name>
 	<description>BASIC to bytecode compiler</description>
 	<url>https://github.com/teverett/jvmBASIC</url>
