--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        distribution: 'zulu'
-        java-version: 12
+          distribution: 'temurin'
+          java-version: 21
+          
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package verify --file pom.xml
+      
